<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#ffffff"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.alumnuscircle.MainActivity">


    <FrameLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7.5"
        android:id="@+id/fragment"
        ></FrameLayout>
<LinearLayout
    android:paddingTop="10dp"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="0.7"
    android:orientation="horizontal"
    >
    <LinearLayout
        android:gravity="center_vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        >
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="30dp">
         <ImageView
          android:id="@+id/homepage"
             android:src="@mipmap/homepage"
             android:layout_centerInParent="true"

          android:layout_width="30dp"
          android:layout_marginLeft="5dp"
          android:layout_marginRight="5dp"
          android:layout_height="30dp"
          />
     </RelativeLayout>
        <TextView
            android:textColor="#AAAAAA"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:text="@string/homepage"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp">
        <ImageView
            android:scaleType="centerInside"
            android:id="@+id/contacts"

            android:layout_centerInParent="true"
            android:background="#00000000"
            android:layout_width="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_height="30dp"
            />
        </RelativeLayout>
        <TextView
            android:textColor="#AAAAAA"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:text="@string/contacts"
            />

    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp">
        <ImageView
            android:id="@+id/findcircle"
            android:scaleType="centerInside"
            android:background="#00000000"

            android:layout_centerInParent="true"
            android:layout_width="39.3dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_height="30dp"
            />
        </RelativeLayout>
        <TextView
            android:textColor="#AAAAAA"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:text="@string/findcircle"
            />

    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp">

            <ImageView
                android:id="@+id/message"

                android:scaleType="centerInside"
                android:background="#00000000"
                android:layout_width="30dp"
                android:layout_height="28dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
        <TextView
            android:textColor="#AAAAAA"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:text="@string/msg"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp">
        <ImageView
            android:scaleType="centerInside"
            android:id="@+id/me"

            android:background="#00000000"
            android:layout_width="29dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_height="30dp"
            android:layout_centerInParent="true"
            />
        </RelativeLayout>
        <TextView
            android:textColor="#AAAAAA"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:text="@string/me"
            />

    </LinearLayout>
</LinearLayout>
</LinearLayout>
